--- a/utils/build.config
+++ b/utils/build.config
@@ -3,7 +3,7 @@ component=daos
 
 [commit_versions]
 ARGOBOTS = v1.1
-PMDK = 1.12.1
+PMDK = 1.12.1.ndctl_env
 ISAL = v2.30.0
 ISAL_CRYPTO = v2.23.0
 SPDK = v22.01.2
